--- a/responsivo.html
+++ b/responsivo.html
@@ -2,82 +2,96 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial.scale=1.0">
 	<link rel="stylesheet" type="text/css" href="responsivo.css">
-	<title></title>
+	<title>Responsivo</title>
 </head>
 <body id="body">
 	<header>
 		<nav>
 			<div class="box-list">
 				<div class="container-list">
-				<ul class="list">
-					<li  class="movies">Black Window</li>
-					<li class="movies">Eternals</li>
-					<li class="movies">Thor: Love and Thunder</li>
-					<li class="movies">Doctor Strange In the Multiverse of Madness</li>
-					<li class="movies">Blade</li>
-				</ul>
-			</div>
+					<label>
+						
+					</label>
+					<ul class="list">
+						<a class="link" href="#bw">  <li class="movies">Black Window</li></a>
+						<a class="link" href="#e">  <li class="movies">Eternals</li></a>
+						<a class="link" href="#th">  <li class="movies">Thor: Love and Thunder</li></a>
+						<a class="link" href="#ds">  <li class="movies">Doctor Strange In the Multiverse of Madness</li></a>
+						<a class="link" href="#b">  <li class="movies">Blade</li></a>
+					</ul>
+				</div>
 			</div>
 		</nav>
-	</header>
-	<main id="main">
 		<div class="box-fase">
 			<h1 class="fase">Fase 4 da Marvel!!!</h1>
 		</div>
-		<section class="box">
-		<div class="container">
-			<h6 class="title">Black Window</h6>
-			<p class="text">O filme da personagem de Scarlett Johansson já está em gravação e será a abertura dessa nova fase do MCU. O filme vai se passar logo após os acontecimentos de Capitão América: Guerra Civil e conta com o personagem Treinador, um vilão geralmente usado em produções do Homem-Aranha.Além de Johansson, o elenco também conta com David Harbour, Florence Pugh, O-T Fagbenle e Rachel Weisz. O filme vai se chamar somente Viúva Negra e estreia nos cinemas brasileiros em 1º de maio de 2020.</p>
-		</div>
-	       <div class="img">
-		    <img class="imagem" src="./img/viuva.jpg">
-			<img class="imagem" src="./img/viuva2.jpeg">
-		</div>
+	</header>
+	<main id="main">
+		<section class="box"> 
+			<div class="box-text">
+				<div class="container">
+					<h6 id="bw" class="title">Black Window</h6>
+					<p class="text">O filme da personagem de Scarlett Johansson já está em gravação e será a abertura dessa nova fase do MCU. O filme vai se passar logo após os acontecimentos de Capitão América: Guerra Civil e conta com o personagem Treinador, um vilão geralmente usado em produções do Homem-Aranha.Além de Johansson, o elenco também conta com David Harbour, Florence Pugh, O-T Fagbenle e Rachel Weisz. O filme vai se chamar somente Viúva Negra e estreia nos cinemas brasileiros em 1º de maio de 2020.</p>
+				</div>
+			    <div class="img">
+				    <img class="imagem" src="./img/viuva.jpg">
+					<img class="imagem" src="./img/viuva2.jpeg">
+				</div>
+			 </div>
 		</section>
 
 		<section class="box">
-		<div class="container">
-			<h2 class="title">Eternals</h2>
-			<p class="text">A Marvel também confirmou que deve trazer Os Eternos, a ala voltada para um passado cósmico da Terra. A história d'Os Eternos deve ser voltada para o lado mais galático do universo, envolvendo Thor e Guardiões das Galáxias.A criação do grupo envolve um passado de mutação, sendo que essa modificação criou os eternos e os deviantes, uma parte mais monstruosa do experimento. A Marvel já informou que o elenco conta com Angelina Jolie, Richard Madden, Kumail Nanjiani, Brian Tyree Henry, Salma Hayek, Lauren Ridloff, Lia McHugh e Don Lee.</p>
-		</div>
-		<div class="img">
-			<img class="imagem" src="./img/eternos.jpeg">
-			<img class="imagem" src="./img/eternos2.jpg">
-		</div>
+			<div class="box-text">
+				<div class="container">
+					<h2 id="e" class="title">Eternals</h2>
+					<p class="text">A Marvel também confirmou que deve trazer Os Eternos, a ala voltada para um passado cósmico da Terra. A história d'Os Eternos deve ser voltada para o lado mais galático do universo, envolvendo Thor e Guardiões das Galáxias.A criação do grupo envolve um passado de mutação, sendo que essa modificação criou os eternos e os deviantes, uma parte mais monstruosa do experimento. A Marvel já informou que o elenco conta com Angelina Jolie, Richard Madden, Kumail Nanjiani, Brian Tyree Henry, Salma Hayek, Lauren Ridloff, Lia McHugh e Don Lee.</p>
+				</div>
+				<div class="img">
+					<img class="imagem" src="./img/eternos.jpeg">
+					<img class="imagem" src="./img/eternos2.jpg">
+				</div>
+			</div>
 		</section>
 
 		<section class="box">
-		<div class="container">
-			<h3 class="title">Thor: Love and Thunder</h3>
-			<p class="text">O deus do trovão volta às telonas nesta quarta fase do MCU, como já era de se esperar. Contudo, há uma meia novidade aqui. A atriz Natalie Portman foi novamente chamada para a franquia, no papel de Jane Foster. Contudo, ela também vai interpretar a versão feminina do herói nos cinemas.</p>
-		</div>
-		<div class="img">
-			<img class="imagem" src="./img/thor.jpeg">
-			<img class="imagem" src="./img/thor2.jpeg">
-		</div>
+			<div class="box-text">
+				<div class="container">
+					<h3 id="th" class="title">Thor: Love and Thunder</h3>
+					<p class="text">O deus do trovão volta às telonas nesta quarta fase do MCU, como já era de se esperar. Contudo, há uma meia novidade aqui. A atriz Natalie Portman foi novamente chamada para a franquia, no papel de Jane Foster. Contudo, ela também vai interpretar a versão feminina do herói nos cinemas.</p>
+				</div>
+				<div class="img">
+					<img class="imagem" src="./img/thor.jpeg">
+					<img class="imagem" src="./img/thor2.jpeg">
+				</div>
+			</div>
 		</section>
 
 		<section class="box">
-		<div class="container">
-			<h4 class="title">Doctor Strange In the Multiverse of Madness</h4>
-			<p class="text">Durante o filme do Homem-Aranha, houve a descoberta de que o multiverso citado pelo vilão Mistério era, na verdade, uma ilusão. Contudo, produtores da Marvel já vieram a público confirmar que existe, sim, um multiverso.Quem deve estrear nessa onda de viajar entre mundos deve ser Doutor Estranho. Segundo o diretor Scott Derrickson, no painel da SDDC, este será um longa assustador do MCU. Ele confirmou também que Feiticeira Escarlate, personagem de Elizabeth Olsen, também vai aparecer no longa.</p>
-		</div>
-		<div class="img">
-			<img class="imagem" src="./img/stranger.jpeg">
-			<img class="imagem" src="./img/strange2.jpg">
-		</div>
+			<div class="box-text">
+				<div class="container">
+					<h4 id="ds" class="title">Doctor Strange In the Multiverse of Madness</h4>
+					<p class="text">Durante o filme do Homem-Aranha, houve a descoberta de que o multiverso citado pelo vilão Mistério era, na verdade, uma ilusão. Contudo, produtores da Marvel já vieram a público confirmar que existe, sim, um multiverso.Quem deve estrear nessa onda de viajar entre mundos deve ser Doutor Estranho. Segundo o diretor Scott Derrickson, no painel da SDDC, este será um longa assustador do MCU. Ele confirmou também que Feiticeira Escarlate, personagem de Elizabeth Olsen, também vai aparecer no longa.</p>
+				</div>
+				<div class="img">
+					<img class="imagem" src="./img/stranger.jpeg">
+					<img class="imagem" src="./img/strange2.jpg">
+				</div>
+			</div>
 		</section>
 
 		<section class="box">
-		<div class="container">
-			<h5 class="title">Blade</h5>
-			<p class="text">O último filme da empresa anunciado durante o painel da SDDC foi Blade. O longa será um reboot do filme original, agora inserindo o personagem no MCU. Mahershala Ali será o Caçador de Vampiros, também introduzindo esta classe de criaturas dentro do universo criado pela empresa.</p>
-		</div>
-		<div class="img">
-			<img class="imagem" src="./img/blade.jpeg">
-			<img class="imagem" src="./img/blade2.jpeg">
-		</div>
+			<div class="box-text">
+				<div class="container">
+					<h5 id="b" class="title">Blade</h5>
+					<p class="text">O último filme da empresa anunciado durante o painel da SDDC foi Blade. O longa será um reboot do filme original, agora inserindo o personagem no MCU. Mahershala Ali será o Caçador de Vampiros, também introduzindo esta classe de criaturas dentro do universo criado pela empresa.</p>
+				</div>
+				<div class="img">
+					<img class="imagem" src="./img/blade.jpeg">
+					<img class="imagem" src="./img/blade2.jpeg">
+				</div>
+			</div>
 		</section>
 	</main>
 </body>
